To set of questions summary page added "Practice Again" button

--- a/wsgi/openshift/geography/static/tpl/practice_tpl.html
+++ b/wsgi/openshift/geography/static/tpl/practice_tpl.html
@@ -65,9 +65,13 @@
     </div>
     <br>
     <span class="pull-right" >
+      <a class="btn btn-lg btn-default" 
+         href="#/refreshpractice/{{part}}/{{placeType}}" >
+        Znovu procvičovat
+      </a>
       <a class="btn-continue btn btn-lg btn-default {{!showSummary || 'btn-primary'}}" 
          href="#/view/{{part}}/" >
-        Pokračovat
+        Mapa znalostí
       </a>
     </span>
   </div>
