--- a/wsgi/openshift/geography/static/tpl/practice_tpl.html
+++ b/wsgi/openshift/geography/static/tpl/practice_tpl.html
@@ -1,4 +1,4 @@
-<blind-map code="{{part}}" ></blind-map>
+<blind-map code="{{part}}" map="map" callback="mapCallback()" ></blind-map>
 <div class="progress quesions-progress">
   <div class="progress-bar" style="width: {{progress}}%;"></div>
 </div>
