--- a/wsgi/openshift/geography/static/tpl/view_tpl.html
+++ b/wsgi/openshift/geography/static/tpl/view_tpl.html
@@ -1,4 +1,4 @@
-<blind-map code="{{part}}" practice="true" ></blind-map>
+<blind-map code="{{part}}" show-tooltips="true" map="map" callback="mapCallback" ></blind-map>
 <div id="container">
   <div ng-show="!placesTypes" class="loading-indicator">
   </div>
