Shorten practice buttons labels

--- a/wsgi/openshift/geography/static/tpl/view_tpl.html
+++ b/wsgi/openshift/geography/static/tpl/view_tpl.html
@@ -22,7 +22,7 @@
           <a href="#/practice/{{part}}/{{type.slug}}" 
              class="btn btn-primary pull-right" 
              ng-show="placesTypes.length > 1" >
-            Procvičovat {{type.name|lowercase}}
+            Procvičovat
           </a>
         </h3>
         <div class="view-places collapse in" id="collapse-{{type.slug}}">
