--- a/main/geography/static/tpl/view_tpl.html
+++ b/main/geography/static/tpl/view_tpl.html
@@ -7,30 +7,38 @@
   <ul ng-show="placesTypes.length && (filteredTypes = (placesTypes|isTypeCategory:typeCat)).length" 
       class="thumbnails fade-show-hide"
       ng-repeat="typeCat in typeCategories">
-    <h2 ng-click="updateCat(typeCat)"
+    <div ng-click="updateCat(typeCat)"
+        class="collapse-control"
         ng-show="filteredTypes.length > 0 && placesTypes.length > 1">
-      <i class="glyphicon {{typeCat.hidden && 'glyphicon-plus-sign' || 'glyphicon-minus-sign'}}"></i>
-      {{typeCat.name}}
-        <a href="#/practice/{{part}}/{{typeCat.slug}}" 
-           class="btn btn-primary pull-right" 
-           ng-hide="typeCat.hidden || filteredTypes.length == 1" >
-          <i class="glyphicon glyphicon-check"></i> Procvičovat
-        </a>
-    </h2>
+      <h2>
+        <i class="glyphicon {{typeCat.hidden && 'glyphicon-plus-sign' || 'glyphicon-minus-sign'}}"></i>
+        {{typeCat.name}}
+      </h2>
+      <a href="#/practice/{{part}}/{{typeCat.slug}}" 
+         class="btn btn-primary pull-right" 
+         ng-hide="typeCat.hidden || filteredTypes.length == 1" >
+        <i class="glyphicon glyphicon-check"></i> Procvičovat
+      </a>
+      <div class="clearfix"></div>
+    </div>
     <div ng-hide="typeCat.hidden">
       <li class="col-sm-{{filteredTypes.length|colNum}}" 
           ng-repeat="type in filteredTypes"
           ng-class="{'collapsed': type.hidden}">
-        <h3 data-toggle="collapse" 
+        <div data-toggle="collapse" 
+            class="collapse-control collapse-control-inner"
             data-target="#collapse-{{type.slug}}"
             ng-click="updateMap(type)">
-          <i class="glyphicon {{type.hidden && 'glyphicon-plus-sign' || 'glyphicon-minus-sign'}}"></i>
-          {{type.name}}
+          <h3>
+            <i class="glyphicon {{type.hidden && 'glyphicon-plus-sign' || 'glyphicon-minus-sign'}}"></i>
+            {{type.name}}
+          </h3>
           <a href="#/practice/{{part}}/{{type.slug}}" 
              class="btn btn-primary pull-right"  >
             <i class="glyphicon glyphicon-check"></i> Procvičovat
           </a>
-        </h3>
+          <div class="clearfix"></div>
+        </div>
         <div class="view-places collapse in" id="collapse-{{type.slug}}">
           <div ng-hide="type.places.length" class="alert alert-info">
             Zde zatím nebylo nic procvičováno.
