--- a/main/geography/static/tpl/overview_tpl.html
+++ b/main/geography/static/tpl/overview_tpl.html
@@ -1,16 +1,24 @@
 <div class="overview">
   <h1>Přehled map</h1>
+  <div ng-hide="mapCategories" class="loading-indicator">
+  </div>
   <div class="map-categories" ng-repeat="c in mapCategories">
       <h2 class="col-md-offset-1" ng-hide="c.name == 'Svět'"> {{c.name}}</h2>
       <ul>
         <li class="overview-row" ng-repeat="map in c.maps">
           <h3 class="col-md-offset-1 col-sm-3"><a href="#/view/{{map.slug}}">{{map.name}}</a></h3>
           <ul class="col-sm-9 col-md-7 inline">
-            <li class="inline" ng-repeat="layer in map.placesTypes">
+            <li class="inline-block" ng-repeat="layer in map.placesTypes" >
               <a href="#/practice/{{map.slug}}/{{layer.slug}}" 
                  class="btn btn-primary atooltip"
                  title="Procvičovat">
                  {{layer.name}}</a>
+               <div class="progress overview-progress map-progress">
+                <div class="progress-bar" style="
+                    background-color: {{mapSkills(map.slug, layer.slug).probability|probColor}};
+                    width: {{(mapSkills(map.slug, layer.slug).count / layer.count)|percent}};">
+                </div>
+              </div>
             </li>
           </ul>
           <div class="clearfix"></div>
