Maps overview: add statistics to whole maps

--- a/main/geography/static/tpl/overview_tpl.html
+++ b/main/geography/static/tpl/overview_tpl.html
@@ -6,7 +6,11 @@
       <h2 class="col-md-offset-1" ng-hide="c.name == 'Svět'"> {{c.name}}</h2>
       <ul>
         <li class="overview-row" ng-repeat="map in c.maps">
-          <h3 class="col-md-offset-1 col-sm-3"><a href="#/view/{{map.slug}}">{{map.name}}</a></h3>
+          <h3 class="col-md-offset-1 col-sm-3"><a href="#/view/{{map.slug}}">{{map.name}}</a>
+            <div class="map-progress" count="{{map.placesTypes|sumCounts}}" 
+                 skills="{{mapSkills(map.slug)}}">
+            </div>
+          </h3>
           <ul class="col-sm-9 col-md-7 inline">
             <li class="inline-block" ng-repeat="layer in map.placesTypes" >
               <a href="#/practice/{{map.slug}}/{{layer.slug}}" 
@@ -14,7 +18,8 @@
                  title="Procvičovat">
                  {{layer.name}}</a>
               <div class="map-progress" count="{{layer.count}}" 
-                   skills="{{mapSkills(map.slug, layer.slug)}}"></div>
+                   skills="{{mapSkills(map.slug, layer.slug)}}">
+              </div>
             </li>
           </ul>
           <div class="clearfix"></div>
