On knowledge map underline place labels with knowledge color

--- a/main/geography/static/tpl/view_tpl.html
+++ b/main/geography/static/tpl/view_tpl.html
@@ -47,6 +47,7 @@
           </div>
           <span ng-repeat="place in type.places"
                 ng-click="placeClick(place)"
+                style="border-bottom: 5px solid {{place.probability|probColor}};"
                 place-label>
           </span>
           <div class="clearfix"></div>
