--- a/main/geography/static/tpl/homepage.html
+++ b/main/geography/static/tpl/homepage.html
@@ -15,7 +15,7 @@
   <div class="welcome-page jumbotron">
       <h1 >Slepé Mapy</h1>
       <div class="flatblock block-welcome_page col-md-offset-1 col-md-10 col-lg-offset-3 col-lg-6">
-        <div class="flatblock-content">Co byste chtěli procvičovat?
+        <div class="flatblock-content">Co chcete procvičovat?
         </div>
           <a href="#/practice/world/state" class="btn btn-primary btn-lg btn-huge" >Státy světa</a>
           <a href="#/practice/europe/state" class="btn btn-default btn-lg btn-huge" >Státy Evropy</a>
