--- a/main/geography/static/tpl/homepage.html
+++ b/main/geography/static/tpl/homepage.html
@@ -24,7 +24,7 @@
           <a href="#/practice/cz/city" class="btn btn-default btn-lg btn-huge" >Města ČR</a>
           <a href="#/practice/europe/mountains" class="btn btn-default btn-lg btn-huge" >Pohoří Evropy</a>
         <div class="flatblock-content">
-          <a href="#/overview/">... nebo něco jiného?</a>
+          ... nebo <a href="#/overview/">něco jiného</a>?
         </div>
         <div class="plugins-social">
           <div class="g-plusone" data-size="medium"></div>
